<resources>
    <string name="app_name">Cars360-Raipur</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_sign_up">Login / Sign Up</string>
    <string name="not_a_customer">Not a customer?</string>
    <string name="click_here">Click here</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_me">Verify Me</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="didn_t_receive">Didn\'t receive?</string>
    <string name="password">Password*</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_help">Help</string>
    <string name="title_profile">Profile</string>
    <string name="locate_us">Locate Us</string>
    <string name="company_profile_1">Cars360 an extended arm of ECO safai lives up to its name by caring for our environment and at the same time adding Cars 360, the name itself suggests the addition of services or in other words raising the standards of our services and Product line up to be offered to our customers. We learn how to care for the environment in every part of our business, at the same time the society of ours is educated as well to take care and help us nurture our environment to make it GREEN ENVIRON-MENT.</string>
    <string name="company_profile_2">Cars 360, is first of its kind in the entire region, which gives you single roof solution to multiple requirement of car\'s. Right from the decision of making it a new car purchase, various treatment to keep your car looking new throughout its life span, periodical service requirement, accidental repair shop, bunch of accessories to choose from, yearly insurance renewal and most importantly dealing in branded tyres, which are the most important part of the car. By doing so have tried that all our  customers meet their all requirements under single roof, which ultimately saves times from moving places to places for various requirements. By washing ECO friendly together, we can make a difference. When we wash our customers car at Cars 3600, our customers are not only getting a clean, shiny, dry vehicle but are also protecting the environment. We\'re committed to clean cars, the health of our customers, and a non-contaminated environment. Most importantly, despite of taking the minimal advantage of natural resource, we don\'t expect or deliver under rated workmanship.  With advanced technology, Eco Safai and Cars 3600 has vision to be a unique company with cutting edge in wash technology, and provide single roof solution to multiple problems that various customers may face, coming to us. We Maintain high-performance car care products with minimal impact on the environment throughout each product\'s entire life-cycle. We are a values-driven company committed to bringing vehicle owners everywhere a superior line of car care products that are best in industry and do not harm the planet or the user. We strive to conserve water, eliminate contaminated runoff, and protect natural resources.  The Mentor\'s both share a healthy personal as well as professional relationship. With a combined years of their experience, they count to 27 years of rich experience in imparting services to the community they work for and with.</string>
    <string name="company_profile_3"><![CDATA[The  mentor\'s  have  a  rich  experience  in providing World class customer service in logistics and automobile industry, knowing in and outs of \"HOW TO SATISFY THE CUSTOMER\", We are thoroughly aware in making various customer engagement activities, which can be applauded by the near and dear ones of our  customers whom we serve. This is what truly the heart of what makes Devansh Enterprises (DTDC) , Eco Safai and Cars 360 unique and apart from other service providers. ECO Safai & Cars 360 takes commitment to customer satisfaction very seriously. For the very first time in car care industry, We offer technical support personnelbeing available 24 hours a day, 7 days a week, the care for your domestic upholstery as well. We are the first company to provide a combo package of caring your home as well as you car. Our success is defined by our customers satisfaction. Coming forth with Cars 360, we would be adding all the weapons in our arsenal, in terms of providing solution to all the needs of our customers. Given below are few snapshots of our customer reviews and customer engagement activities carried out by us.]]></string>
    <string name="vision_and_mission_1">Water  is  a  transparent  and  nearly colorless chemical substance that is the main constituent of Earth\'s streams, lakes,  and  oceans,  and  the  fluids  of  most  living organisms. Its chemical formula is H2O, meaning that its molecule contains one oxygen and two hydrogen atoms, that are connected by covalent bonds. Water strictly refers to the liquid state of that substance, that prevails at standard ambient temperature and pressure; but it often refers to its solid state (ice) or its gaseous state (steam or water vapor). It also occurs in nature as snow, glaciers, ice packs and icebergs, clouds, fog, dew, aquifers, and atmospheric humidity. Water covers 71% of the Earth\'s surface. It is vital for all known forms of life. On Earth, 96.5% of the planet\'s crust water is found in seas and oceans, 1.7% in groundwater, 1.7% in glaciers and the ice caps of Antarctica and Greenland, a small fraction in other large water bodies, and 0.001% in the air as vapor, clouds (formed of ice and liquid water suspended in air), and precipitation. Only 2.5% of this water is freshwater, and 98.8% of that water is in ice (excepting ice in clouds) and groundwater. Less than  0.3% of all freshwater is in rivers, lakes, and the atmosphere, and an even smaller amount of the Earth\'s freshwater (0.003%) is contained within biological bodies and manufactured products. A greater quantity of water is found in the earth\'s interior.</string>
    <string name="vision_and_mission_2">Taking a note of above description, It can be very well understood that, Out of 100% of Water available in planet Earth, only 0.003% is available for human drinking or other uses such as cultivation etc. It\'s a small move of ours, to try and contribute maximum saving of the negligible fraction of water available to mankind, by not using it in washing car, which by far is not a productive job.</string>
    <string name="vision_and_mission_3">Cars 360 has vision to be a unique company with cutting edge wash technology. Maintain high-performance car care products with minimal impact on the environment throughout each product\'s entire life-cycle. We are a values-driven company committed to bringing vehicle owners everywhere a superior line of car care products that are best in industry and do not harm the planet or the user. We strive to conserve water, eliminate contaminated runoff, and protect nat.</string>
    <string name="why_cars360_1">Cars 360˚, a company, which always has an answer as \"YES\" to every requirement or for problems in any car. Cars 360˚, is first of its kind in the entire region, which gives you single roof solution to multiple requirement of car\'s. Right from the decision of making it a new car purchase, various treatment to keep your car looking new throughout its life span, periodical service requirement, accidental repair shop, bunch of accessories to choose from, yearly insurance renewal and most importantly dealing in branded tyres, which are the most important part of the car. By doing so have tried that all our customers meet their all requirements under single roof, which ultimately saves times from moving places to places for various requirements.</string>
    <string name="why_cars360_2"><![CDATA[With advanced technology & Highly trained man force to undergo every challenge bought in by our clients, Latest equipment and diagnostic tool makes our work merry everytime. Cars 360˚ has vision to be a unique with cutting edge company in automobile industry, and provide single roof solution to multiple problems that various customers may face, coming to us. We Maintain high-performance car care products with minimal impact on the environment throughout each product\'s entire life-cycle. We are a values-driven company committed to bringing vehicle owners everywhere a superior line of car care products that are best in industry and do not harm the planet or the user.]]></string>
    <string name="mechanical_services_details"><![CDATA[[<b>SAFETY:</b>]\n Thousands of accidents occur every year as a consequence of owners avoiding vehicle maintenance. While many of us choose to blame poor driving more often than not, many of these accidents happen due to faulty or timeworn brake systems, uneven or limited tire treads, worn out wiper blades, and exhaust build ups just to name a few. Make sure that yourself, your family,  your car, and all the other vehicles around you are safe by scheduling regular service checks.   INCREASED VEHICLE PERFORMANCE & RELIABILITY:  If you are uncompromising with the high level of service you provide your vehicle, you can be sure that your vehicle will return the favour with being more dependable to get you where you need to go. If you pay a little more attention to a vehicles vital fluids, oils, and various parts, you can be sure to reduce the internal wear and tear.   LOWER COST OF OWNERSHIP: wait, what? How can I lower my cost of ownership  by spending more on maintenance? By performing Routine Maintenance, you can avoid a major malfunction, which can ultimately lower your cost of ownership, as many of the large-scale problems with vehicles can be identified early and prevented.   HIGHER RE-SALE VALUE: Most consumers of pre-owned vehicles are  adamant  about  knowing  the vehicles service history and invest a great effort in finding a vehicle in great condition and well taken care of. By servicing regularly, and keeping your records organized, you can prove this as well as the fact that your vehicle hasn\'t had any major problems. If you had two identical vehicles with the same mileage for sale, wouldn\'t it make sense that the vehicle with a great service history would hold a higher price than the one with poor service?   REDUCE POLLUTION: It\'s no secret that vehicle emissions contribute directly to global pollution, but a vehicle that has been maintained consistently will produce lower amounts of dangerous fumes and fluids that can potentially be released into the air and watersupply.   REDUCE ROADSIDE EMERGENCIES: There isn\'t much in this world that is more discouraging than sitting stranded on the side  of  the  road  with  your  vehicle inoperable,  especially  if  you  have  somewhere important to be or are in the middle of a family vacation. Regular Maintenance ensures that you won\'t get sidelined in the middle of nowhere, and keeps you from shelling out money for towing, rental cars, or even lodging that you otherwise weren\'t planning to spend.]]></string>
    <string name="share">Share App</string>
    <string name="title_service_logs">Service Logs</string>
    <string name="title_statistics">Statistics</string>
    <string-array name="ServiceRequests">
        <item>Mechanical and Regular Services</item>
        <item>Accidental Repair</item>
        <item>Car Detailing</item>
        <item>Tires</item>
        <item>Car Wrapping</item>
        <item>Car Modification</item>
        <item>Accessories</item>
    </string-array>
    <string-array name="RequestedRepairs">
        <item>Detailing</item>
        <item>Periodic Maintenance</item>
        <item>General Repair</item>
        <item>Body &amp; Paint</item>
    </string-array>
    <string-array name="CarBodyColor">
        <item>Black</item>
        <item>White</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
    </string-array>
</resources>