<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.customer.fragments.explore_tabs.VisionAndMissionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivBanner"
            android:layout_width="0dp"
            android:layout_height="@dimen/_150sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/explore_image_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/secondaryRed"
            app:cardElevation="@dimen/_10sdp"
            app:contentPaddingBottom="@dimen/_10sdp"
            app:contentPaddingTop="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/ivBanner"
            app:layout_constraintTop_toBottomOf="@+id/ivBanner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Vision And Mission"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vision_and_mission_1"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/vision_and_mission_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vision_and_mission_2"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:gravity="center"
                android:text="Advanced Technology"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/primaryRed"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/vision_and_mission_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vision_and_mission_3"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textAppearance="@android:style/TextAppearance.Small" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>