<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onboarding.fragments.customer.OTPFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="@dimen/_10sdp"
        android:indeterminateDrawable="@drawable/progress_bar_red"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/logo_cars360"
        android:transitionName="logoTransition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llVerifyOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Verify OTP"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Enter your received OTP here"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp">

        <EditText
            android:id="@+id/etC1"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:inputType="phone"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etC2"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:inputType="phone"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etC3"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:inputType="phone"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etC4"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:inputType="phone"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etC5"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:inputType="phone"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etC6"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:inputType="phone"
            android:textSize="20sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/didn_t_receive"/>

        <TextView
            android:id="@+id/tvResendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_otp"
            android:textColor="#FF3838"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVerify"
            style="@style/MyFilledButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/verify_me"/>

    </LinearLayout>

</RelativeLayout>